# Meridian

./: .replit  DATABASE_SCHEMA.md  PROJECT_OVERVIEW.md  STATUS_REPORT.md  check_meridian.py  package-lock.json  package.json  pyproject.toml  test-model-creation.js  test_gpu.py
attached_assets/: Pasted--Handle-adstock-which-is-a-DataFrame-print-json-dumps-debug-adstock-columns-column-1748269470722.txt  Pasted--You-re-Absolutely-Right-Yes-we-went-in-circles-Started-with-pandas-got-unexpected-keyword--1748224299773.txt  Pasted--check-github-file-sync-marketing-mix-modeling-project-10-results--1748249276353.txt  Pasted--usr-bin-env-python3-Lightweight-Meridian-API-discovery-avoids-heavy-TensorFlow-operations-1748254506458.txt  Pasted--usr-bin-env-python3-Minimal-Meridian-API-test-script-verify-correct-method-usage-Run-thi-1748254056542.txt  Pasted--usr-bin-env-python3-Real-Meridian-training-script-NO-MOCK-DATA-import-json-impor-1748267804774.txt  Pasted--usr-bin-env-python3-Train-Marketing-Mix-Model-using-Google-s-Meridian-Based-on-https-gi-1748144676996.txt  Pasted-1-Dimension-Mismatch-in-Media-Data-Your-error-shows-Meridian-expects-media-spend-to-have-dimensions-1748247672639.txt  Pasted-Based-on-the-official-Meridian-API-documentation-at-https-developers-google-com-meridian-reference-1748297919176.txt  Pasted-CONTEXT-Found-the-Real-Analyzer-Methods-The-Analyzer-has-properties-like-roi-summary-metrics-etc-1748266814349.txt  Pasted-CONTEXT-Model-Training-Succeeded-Results-Extraction-Failed-The-Meridian-model-successfully-complet-1748266369971.txt  (+32 more)
server/: routes.ts  (+1 more)
(+133 files in other folders)
